# arena

./: .gitattributes  .gitignore  README.md
client/: client.resource_order  client.yyp
client/objects/Networking/: Create_0.gml  Networking.yy  Other_68.gml
client/objects/oOther/: Create_0.gml  oOther.yy
client/objects/oPlayer/: Create_0.gml  Draw_0.gml  oPlayer.yy
client/objects/oSelf/: Step_0.gml  oSelf.yy
client/objects/obj_camera/: Alarm_0.gml  Create_0.gml  Other_4.gml  Step_0.gml  obj_camera.yy
client/objects/obj_col/: obj_col.yy
client/objects/obj_menu/: Create_0.gml  Draw_0.gml  obj_menu.yy
client/objects/obj_network/: Create_0.gml  Draw_0.gml  Draw_64.gml  Other_68.gml  Step_0.gml  obj_network.yy
client/objects/obj_other/: Step_0.gml  obj_other.yy
client/objects/obj_player_parent/: Create_0.gml  Draw_0.gml  Draw_64.gml  obj_player_parent.yy
client/objects/obj_respawn_menu/: Create_0.gml  Draw_0.gml  Draw_64.gml  Step_0.gml  obj_respawn_menu.yy
client/objects/obj_self/: Alarm_0.gml  Create_0.gml  Draw_64.gml  Step_0.gml  obj_self.yy
client/objects/obj_tracer/: Create_0.gml  Step_0.gml  obj_tracer.yy
client/options/main/: options_main.yy
client/options/windows/: options_windows.yy
client/rooms/Room1/: Room1.yy
client/rooms/rm_game/: rm_game.yy
client/rooms/rm_menu/: rm_menu.yy
client/rooms/rm_outside/: rm_outside.yy
client/scripts/Buffer/: Buffer.gml  Buffer.yy
client/scripts/Network/: Network.gml  Network.yy
client/scripts/Position/: Position.gml  (+1 more)
server/: Cargo.toml
server/src/: main.rs  packet.rs  socket.rs  test.py
(+15 files in other folders)
